# CellClassifier

./: Readme.md  pyproject.toml  requirements.txt  st_tcell_app.py  tcell.py  utils.py
.streamlit/: st-config.toml  st-pages.toml
data/: ephys_data.csv  meta_data.csv  morph_data.csv
images/: R-C.jfif
ipynb/: Ephys-Deep-best.csv  Ephys-Deep-good-cv51.csv  Ephys-Deep-good.csv  Ephys-Deep-high-cv51.csv  Ephys-Deep-high.csv  Ephys-Deep-medium-cv31.csv  Ephys-Deep-medium-cv51.csv  Ephys-Deep-medium-cv510.csv  Ephys-Deep-medium-cv520.csv  Ephys-Deep-medium-cv55.csv  Ephys-Deep-medium-cv81.csv  Ephys-Deep-medium-importance-old000.csv  Ephys-Deep-medium-importance-old0005.csv  Ephys-Deep-medium-importance-old001.csv  Ephys-Deep-medium-importance000.csv  Ephys-Deep-medium-importance0005.csv  Ephys-Deep-medium-importance001.csv  Ephys-Deep-medium.csv  Ephys-Superficial-best.csv  Ephys-Superficial-good-cv51.csv  Ephys-Superficial-good-cv51.old.csv  Ephys-Superficial-good.csv  Ephys-Superficial-high-cv51.csv  Ephys-Superficial-high.csv  Ephys-Superficial-medium-cv31.csv  Ephys-Superficial-medium-cv51.csv  Ephys-Superficial-medium-cv510.csv  Ephys-Superficial-medium-cv520.csv  Ephys-Superficial-medium-cv55.csv  Ephys-Superficial-medium-cv81.csv  Ephys-Superficial-medium-importance-old000.csv  Ephys-Superficial-medium-importance-old0005.csv  Ephys-Superficial-medium-importance-old001.csv  Ephys-Superficial-medium-importance000.csv  Ephys-Superficial-medium-importance0005.csv  Ephys-Superficial-medium-importance001.csv  Ephys-Superficial-medium.csv  label-unlabel.xlsx  (+45 more)
(+161 files in other folders)
