[tool.poetry]
name = "tcell"
version = "0.1.0"
description = "T cell predict"
authors = ["Wang yunshan<youemail@>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
pandas = "^2.2.2"
autogluon = "^1.1.1"
streamlit = "^1.38.0"
st-pages = "^1.0.1"
imblearn = "^0.0"
seaborn = "^0.13.2"
lightgbm = "3.3.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 国内修改peotry源,国外删除此节
[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"  

